[metadata]
name = dicom-export
version = attr: dicom-export.VERSION
author = Dominik Mairhöfer
author_email = dominik@mairhoefer.xyz
description = Tool for exporting DICOM data from PACS
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU AGPLv3
url = https://github.com/DominikMa/dicom-export
project_urls =
    Documentation = https://github.com/DominikMa/dicom-export
    Bug Tracker = https://github.com/DominikMa/dicom-export/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
package_dir =
    =src
packages=find:
python_requires = >=3.9
install_requires =
    pip
    pydantic
    coloredlogs
    click
    tqdm
    pydicom
    pypx

[options.packages.find]
where=src

[options.extras_require]
tests =
    pytest
    coverage
